# AugReality

./: README.md
AR4RGB/: CMakeLists.txt  ar4rgbd.cpp
cloud_reader/: CMakeLists.txt  base.cpp
cloud_reader/clouds/objectos_isolados/: caixa_azul.txt  caixa_branca.txt  caixa_vermelha.txt  cassete_preta.txt  furador.txt  livro_azul.txt  livro_cinzento.txt  xicara_branca.txt
cloud_reader/models/: cloudInitializer.cpp  cloudInitializer.h
